# panel-price-predictor

./: .gitignore  README.md
apps/api/: pyproject.toml
apps/api/app/: main.py
